--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -49,10 +49,10 @@
 .container button {
     border-radius: 0.5em;
     border: #00ff40 solid;
-    margin-top: 0.2em;
+    margin-top: 2em;
     background-color: rgb(71, 30, 84);
     color: rgb(216, 213, 216);
-    font-size: 1.2em;
+    font-size: .8em;
     transform: scale(1);
     padding: 0.5em;
     font-weight: 700;
@@ -92,4 +92,12 @@
     justify-content: space-between;
     width: 100%;
     
+}
+.rating {
+    color:rgb(197, 133, 133);
+    font-size: 1.1em;
+}
+.genero {
+    padding-top: .5em;
+    font-size: 1em;
 }
