--- a/client/src/components/addVideogames/addVideogames.module.css
+++ b/client/src/components/addVideogames/addVideogames.module.css
@@ -24,7 +24,8 @@
 }
 .checkbox {
     text-align: start;
-    margin-left: -10px;
+    margin-left: -2px;
+    color: #ff851b
     
 }
 
@@ -44,7 +45,7 @@
 }
 
 .contenedor .toggle:hover {
-    border-top: 2px solid #0075d9;
+    border-top: 2px solid #80c1fa;
     border-bottom: 2px solid #0075d9;
 }
 
@@ -55,9 +56,10 @@
 .contenedor .h2 {
     margin: 1em 0 28px 0;
     text-align: center;
-    font-size: 20px;
-    font-weight: 400;
+    font-size: 1.2em;
+    font-weight: 800;
     line-height: 1;
+    color: #00ff40;
 }
 
 .contenedor .input {
@@ -121,4 +123,14 @@
     opacity: 1;
     display: block;
     
+}
+.h3 {
+    font-size: 1em;
+    text-align: center;
+    padding-bottom: 1em;
+    color: #ff851b
+}
+.error {
+    color:red;
+    text-align: center;
 }
