--- a/client/src/components/numberPage/number.module.css
+++ b/client/src/components/numberPage/number.module.css
@@ -1,6 +1,6 @@
 .button {
-    width: 40px;
-    height: 64px;
+    width: 38px;
+    height: 50px;
     font-weight: bold;
     font-size: 1.2em;
     color:black;
@@ -11,12 +11,31 @@
     transform: scale(1.05);
 }
 .isactive {
-    width: 40px;
-    height: 64px;
+    width: 38px;
+    height: 50px;
     background-color: green;
     color:white;
     font-weight: bold;
     font-size: 1.2em;
     border: 1px solid black;
     border-radius: 8%;
+}
+@media(max-width: 768px) {
+    .button {
+        width: 28px;
+        height: 35px;
+        
+        font-size: 1em;
+        
+    }
+    .button:hover {
+        transform: scale(1.05);
+    }
+    .isactive {
+        width: 28px;
+        height: 35px;
+        
+        font-size: 1em;
+        
+    }
 }
